# 3D-AVA

./: README.md  pyproject.toml
src/data/: convert_emc_to_gs_format.py  convert_zed_keypoint_to_openpose.py  create_easymocap_data.py  extract_bbox.py  extract_keypoint.py  extract_mask.py  prepare.py  schema.py  trim_entries.py
src/utils/: data_utils.py  zed_utils.py
src/zed/: body_tracking.py  main.py  object_detection.py  persist.py  retrieve.py
src/zed-config/: pyzed-4.2-cp39-cp39-linux_x86_64.whl
