[project]
name = "3d-ava"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "numpy==1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pip>=25.1.1",
    "plyfile>=1.1.2",
    "pyopengl-accelerate>=3.1.9",
    "pyopengl>=3.1.9",
    "requests>=2.32.4",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.54.1",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

# New section added here to instruct setuptools to find packages inside src/
[tool.setuptools.packages.find]
where = ["src"]
